@@ -36,6 +36,7 @@ Bugs fixed:
 - 1610514 Aligned sfcc/sfcb libsfcUtil versions
 - 1613925 Fixed memory loss in providerinfo cache
 - 1613933 Fixed embedded Objects in Indications do not work
+- 1613936 Fixed associator call fails when role parameters are set
 
 Changes in 1.1.1
 ================
